Defines draft title.

--- a/symposium.tex
+++ b/symposium.tex
@@ -22,7 +22,7 @@
 \beginheader
 
 \jtitle%
-{TBD Title Here}
+{An Evolutionary-Computing Based Framework for Solving Simultaneous Continuous Games}
 
 \begin{authors}
 \name{1}{Rui Leite},
@@ -41,7 +41,7 @@
 \end{center}
 ]
 
-\etitle{TBD Title Here}
+\etitle{An Evolutionary-Computing Based Framework for Solving Simultaneous Continuous Games}
 
 \ename{1}{Rui Leite(23hs201j@shinshu-u.ac.jp)}
 \ename{1}{Hernan Aguirre(ahernan@shinshu-u.ac.jp)}
